--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "wild-oasis-webapp",
+  "name": "wild-oasis",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prod": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,7 +18,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/react": "19.0.2",
+    "@types/react": "19.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
